Fix clipping on compressed link vote arrows.

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -645,6 +645,11 @@ ul.flat-vert {text-align: left;}
     overflow: hidden;
 }
 
+.compressed .midcol {
+    width: 15px;
+    margin-right: 5px;
+}
+
 .entry {
     overflow: hidden; 
     margin-left: 3px;
